// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Snapshots tests should match snapshot 1`] = `
<div>
  <div>
    <div
      class="component m"
      role="tablist"
    >
      <div
        class="container"
      >
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="rightAddons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
        <div
          class="line"
          style="width: 0px; transform: translateX(0px);"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 2`] = `
<div>
  <div>
    <div
      class="component s"
      role="tablist"
    >
      <div
        class="container"
      >
        <button
          aria-selected="false"
          class="component component s default withRightAddons title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="addons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="component component s default checked title"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component s default title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component s default title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component s default title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 3`] = `
<div>
  <div>
    <div
      class=""
      role="tablist"
    >
      <div
        class="container"
      >
        <button
          aria-selected="false"
          class=""
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span>
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class=""
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class=""
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class=""
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class=""
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
        <div
          style="width: 0px; transform: translateX(0px);"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 4`] = `
<div>
  <div>
    <div
      class=""
      role="tablist"
    >
      <div
        class="container"
      >
        <button
          aria-selected="false"
          class="component component xs default withRightAddons"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="addons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="component component xs default checked"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component xs default"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component xs default"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component xs default"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 5`] = `
<div>
  <div>
    <div
      class="component m"
      role="tablist"
    >
      <div
        class="container"
      >
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="rightAddons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
        <div
          class="line"
          style="width: 0px; transform: translateX(0px);"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 6`] = `
<div>
  <div>
    <div
      class="component s"
      role="tablist"
    >
      <div
        class="container"
      >
        <button
          aria-selected="false"
          class="component component s default withRightAddons title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="addons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="component component s default checked title"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component s default title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component s default title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component s default title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;
